# TNM111-InfoVis

./: .gitignore  README.md  index.html
assignment2/: Cargo.toml  main.rs
assignment2/JS/: sim.html  sim.js  style.css
assignment3/js/: fpc.js  map.js
assignment4/: index.html  index.js
