[package]
name = "assignment2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
plotters = "0.3.7"
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "assignment2"
path = "main.rs"
